# BlihRepositories

101pong_2018/: Makefile
102architect_2018/: Makefile
103cipher_2018/: Makefile
104intersection_2018/: Makefile
OOP_indie_studio_2019/: CMakeLists.txt  controls.txt
OOP_indie_studio_2019/.git_old/: config  index  packed-refs
OOP_indie_studio_2019/.git_old/logs/refs/remotes/origin/: HEAD
OOP_indie_studio_2019/.git_old/objects/pack/: pack-e21b169fd768d6de9c2cefa8475bc670072901b8.idx
OOP_indie_studio_2019/.git_old/refs/heads/: master
OOP_indie_studio_2019/assets/maps/: map.txt
OOP_indie_studio_2019/inc/: platform.hpp
OOP_indie_studio_2019/inc/game_components/: Bomb.hpp  IA.hpp  Map.hpp  Player.hpp  playerControl.hpp  playerRegistry.hpp  powerUp.hpp
OOP_indie_studio_2019/inc/graphics/: Animator.hpp  MyEventReceiver.hpp  graphics.hpp
OOP_indie_studio_2019/inc/gui/: guiElements.hpp
OOP_indie_studio_2019/inc/menu/: menuButtons.hpp  menuElements.hpp
OOP_indie_studio_2019/inc/utils/: utils.hpp
OOP_indie_studio_2019/modules/: FindIrrlicht.cmake
OOP_indie_studio_2019/src/: main.cpp
OOP_indie_studio_2019/src/game_components/: Bomb.cpp  IA.cpp  Map.cpp  Player.cpp  create_players.cpp  create_powerup.cpp  playerRegistry.cpp
OOP_indie_studio_2019/src/graphics/: Animator.cpp  create_map.cpp  draw_window.cpp  init_graphics.cpp
OOP_indie_studio_2019/src/ui/gui/: displayGuiElements.cpp  initGuiElements.cpp
OOP_indie_studio_2019/src/ui/menu/: menuButtons.cpp  menuElements.cpp
OOP_indie_studio_2019/src/utils/: read_map_from_file.cpp
(+1065 files in other folders)
